--- a/OOP/ExtensionMethodsDelegatesLambdaLINQ/Students/Students.csproj
+++ b/OOP/ExtensionMethodsDelegatesLambdaLINQ/Students/Students.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Departments.cs" />
+    <Compile Include="Group.cs" />
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
