--- a/OOP/OOPPrinciplesPart2/Bank accounts/Bank accounts.csproj
+++ b/OOP/OOPPrinciplesPart2/Bank accounts/Bank accounts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F988B38F-69E7-4F8D-A7C9-7841284A29C6}</ProjectGuid>
+    <ProjectGuid>{286DDBE2-3C3F-44D9-9173-2282194C6408}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BankAccounts</RootNamespace>
-    <AssemblyName>BankAccounts</AssemblyName>
+    <RootNamespace>Bank_accounts</RootNamespace>
+    <AssemblyName>Bank accounts</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,14 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accounts\Account.cs" />
-    <Compile Include="Accounts\Deposit.cs" />
-    <Compile Include="Accounts\loan.cs" />
-    <Compile Include="Accounts\Mortgage.cs" />
-    <Compile Include="CorporateCustomers.cs" />
     <Compile Include="Customer.cs" />
-    <Compile Include="Individuals.cs" />
-    <Compile Include="Test.cs" />
+    <Compile Include="Deposit.cs" />
+    <Compile Include="Enums\CustomerType.cs" />
+    <Compile Include="IAccount.cs" />
+    <Compile Include="Loan.cs" />
+    <Compile Include="Mortgage.cs" />
+    <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
