Some Asserts added. Split the logic to different classes.

--- a/High Quality Code - Part2/AssertionsAndExceptions/Exceptions-homework/Exceptions-homework.csproj
+++ b/High Quality Code - Part2/AssertionsAndExceptions/Exceptions-homework/Exceptions-homework.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleMathExam.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
