--- a/High Quality Code - Part2/AssertionsAndExceptions/Assertions-homework/Assertions-homework.csproj
+++ b/High Quality Code - Part2/AssertionsAndExceptions/Assertions-homework/Assertions-homework.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="AssertionsHomework.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search.cs" />
+    <Compile Include="Sort.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
